k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parker
  namespace: parker
spec:
  selector:
    matchLabels:
      run: parker
  replicas: 2
  template:
    metadata:
      labels:
        run: parker
    spec:
      containers:
        - name: parker
          image: ghcr.io/mikemoraned/parker:0.1.1
          ports:
            - name: http
              containerPort: 8000
          livenessProbe:
            httpGet:
              path: /health_check
              port: 8000
          readinessProbe:
            httpGet:
              path: /health_check
              port: 8000
