k8s/speculaas-service.yml
apiVersion: v1
kind: Service
metadata:
  name: parker-service
  namespace: speculaas
spec:
  type: NodePort
  selector:
    run: parker
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
