k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: parker-ingress
  namespace: parker
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - parker.do.houseofmoran.io
      secretName: parker-cert-prod
  rules:
    - host: parker.do.houseofmoran.io
      http:
        paths:
          - path: /
            backend:
              serviceName: parker-service
              servicePort: 80
