k8s/speculaas-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: speculaas-ingress
  namespace: speculaas
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - speculaas.do.houseofmoran.io
        - speculaas.houseofmoran.io
        - speculaas.houseofmoran.com
      secretName: speculaas-cert-prod
  rules:
    - host: speculaas.do.houseofmoran.io
      http: &http
        paths:
          - path: /
            backend:
              serviceName: parker-service
              servicePort: 80
          - path: /graphql
            backend:
              serviceName: parker-service
              servicePort: 80
    - host: speculaas.houseofmoran.io
      http: *http
    - host: speculaas.houseofmoran.com
      http: *http
